fix: target fixed height only to folders dropdown to avoid covering screen with filter dropdown

--- a/style.main.css
+++ b/style.main.css
@@ -107,17 +107,23 @@ h4 {
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
     padding: 1.5rem;
     z-index: 95;
-    height: calc(100vh - 110px);
-    height: calc(100dvh - 110px);
     max-height: calc(100vh - 110px);
     max-height: calc(100dvh - 110px);
-    overflow-y: hidden;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
     overflow-x: hidden;
-    overscroll-behavior: none;
-    touch-action: none;
+    overscroll-behavior: contain;
     display: flex;
     flex-direction: column;
+    gap: 1.5rem;
+}
+
+#mobileDropdownFolders {
+    height: calc(100vh - 110px);
+    height: calc(100dvh - 110px);
+    overflow-y: hidden;
+    overscroll-behavior: none;
+    touch-action: none;
     gap: 0;
 }
 
